Remove special handling for Java versions < 8
We don't execute tests directly with such versions anymore.
This avoids using Gradle's 'JvmVersionDetector' service which may
fail to load with older Tooling API versions on the test classpath.